Changement des couleurs pour le thème

--- a/resources/sass/_variables.sass
+++ b/resources/sass/_variables.sass
@@ -1,8 +1,7 @@
 // Body
-$body-background-color: #404041
-$quiz-box-background: #4a4b4f
-$primary: #fa5d3a
-$white: #edeef2
+$body-background-color: #e9edf1
+$primary: #3d73dd
+$quiz-box-background: $primary
 
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif
