Changement de la couleur danger

--- a/resources/sass/_variables.sass
+++ b/resources/sass/_variables.sass
@@ -1,7 +1,8 @@
-// Body
+// Colors
 $body-background-color: #e9edf1
 $primary: #3d73dd
 $quiz-box-background: $primary
+$danger: #ff0011
 
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif
